[package]
name = "hwid"
version = "0.0.1"
edition = "2021"
description = "Supplies a id generated on the systems specifications"
license-file = "LICENSE"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sysinfo = "^0.23.8"
sys-info = "^0.9.1"
psutil = "^3.2.2"
deterministic-hash = "1.0.1"